# adshield-ai

./: .env.example  .gitignore  .vercelignore  AGENTS.md  Makefile  README.md  design-qa.md  index.html  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json  vite.config.mjs
.github/workflows/: ci.yml  production-smoke.yml
api/: index.py
data/policies/: ftc_health_claims.md  ftc_truth_in_advertising.md  google_counterfeit_goods.md  google_dangerous_products.md  google_financial_services.md  google_gambling_games.md  google_healthcare_medicines.md  google_misrepresentation.md  mandarin_evasion.md  (+16 more)
docs/: ADVERTISER_INTEGRITY.md  BENCHMARK_METHODOLOGY.md  CHANGELOG_PRODUCT_UPGRADE.md  DATA_SCOPE_AND_TRUTH_BOUNDARIES.md  DECISION_TRACE.md  EVALUATION_REPORT.md  EXTERNAL_VALIDATION_UW.md  METRIC_DICTIONARY.md  POLICY_STUDIO.md  PRODUCTION_GOVERNANCE.md  PRODUCT_ARCHITECTURE.md  PROJECT_BRIEF.md  PUBLIC_EVIDENCE_REGISTER.md  REAL_ADS_ENRICHMENT.md  RISK_SCORING_METHODOLOGY.md  RISK_TAXONOMY.md  STRATEGY_EVALUATION.md  STRATEGY_LIFECYCLE.md
notebooks/: 01_data_profile.ipynb  02_metric_diagnosis.ipynb
scripts/: check_meta_token.py  export_deploy_db.py  record_availability_probe.py  run_dev.py
src/: App.jsx  __init__.py  config.py  styles.css
tests/: test_api.py  test_comparison.py  test_data_access.py  test_data_contract.py  test_evaluation.py  test_evidence.py  test_feedback.py  test_governance.py  test_lifecycle.py  test_normalize_ads.py  test_policies.py  test_public_evidence.py  test_repository.py  test_scoring.py
(+38 files in other folders)
